--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitRead</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="GitRead: A powerful README generator for your GitHub projects." />
+    <meta name="author" content="GitRead" />
 
     <meta property="og:title" content="GitRead" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="GitRead: A powerful README generator for your GitHub projects." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.svg" />
   </head>
 
   <body>
